# HW_WEB_08

./: README.md  consumer.py  crud_odm.py  find_odm.py  models_contact_odm.py  models_odm.py  my_attempts.py  producer.py  pyproject.toml  quotes.json  seed.py  t_models.py  t_seed.py
