[tool.poetry]
name = "hw-web-08"
version = "0.1.0"
description = ""
authors = ["NataSha157 <shnataliya77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
pymongo = {version = "3.11", extras = ["srv", "tls"]}
pika = "^1.3.2"
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
